--- a/index.html
+++ b/index.html
@@ -1,18 +1,158 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cadastro de Cliente - Academia</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            width: 80%;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        label {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+        input, select, textarea {
+            width: 100%;
+            padding: 8px;
+            margin: 5px 0 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        .btn {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            font-size: 16px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .btn:hover {
+            background-color: #45a049;
+        }
+    </style>
+</head>
 <body>
+    <div class="container">
+        <h1>Cadastro de Cliente - Academia</h1>
+        <form action="#" method="POST">
+            <!-- Dados Pessoais -->
+            <h2>Dados Pessoais</h2>
+            <div class="form-group">
+                <label for="nome">Nome Completo:</label>
+                <input type="text" id="nome" name="nome" required>
+            </div>
+            <div class="form-group">
+                <label for="idade">Idade:</label>
+                <input type="number" id="idade" name="idade" required>
+            </div>
+            <div class="form-group">
+                <label for="sexo">Sexo:</label>
+                <select id="sexo" name="sexo" required>
+                    <option value="">Selecione</option>
+                    <option value="Masculino">Masculino</option>
+                    <option value="Feminino">Feminino</option>
+                    <option value="Outro">Outro</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="contato">Contato (Telefone ou E-mail):</label>
+                <input type="text" id="contato" name="contato" required>
+            </div>
+            <div class="form-group">
+                <label for="modalidade">Modalidade de Treino:</label>
+                <select id="modalidade" name="modalidade" required>
+                    <option value="">Selecione</option>
+                    <option value="Musculação">Musculação</option>
+                    <option value="Yoga">Yoga</option>
+                    <option value="Pilates">Pilates</option>
+                    <option value="Cardio">Cardio</option>
+                    <option value="Treinamento Funcional">Treinamento Funcional</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="historico">Histórico:</label>
+                <textarea id="historico" name="historico" rows="4" placeholder="Descreva brevemente o histórico do cliente (caso exista)"></textarea>
+            </div>
+            <div class="form-group">
+                <label for="data_inicio">Data de Início da Matrícula:</label>
+                <input type="date" id="data_inicio" name="data_inicio" required>
+            </div>
+            <div class="form-group">
+                <label for="frequencia">Frequência:</label>
+                <select id="frequencia" name="frequencia" required>
+                    <option value="">Selecione</option>
+                    <option value="Semanal">Semanal</option>
+                    <option value="Mensal">Mensal</option>
+                </select>
+            </div>
 
-<h2>HTML Forms</h2>
+```
+        <!-- Pagamentos -->
+        <h2>Pagamentos</h2>
+        <div class="form-group">
+            <label for="status_pagamento">Status de Pagamento:</label>
+            <select id="status_pagamento" name="status_pagamento" required>
+                <option value="">Selecione</option>
+                <option value="Recorrente Ativo">Recorrente Ativo</option>
+                <option value="Atrasado">Atrasado</option>
+                <option value="Inadimplente">Inadimplente</option>
+                <option value="Cancelado">Cancelado</option>
+            </select>
+        </div>
 
-<form action="">
-  <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname" value="Emily"><br>
-  <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" value="Thalena"><br><br>
-  <input type="submit" value="salvar">
-</form> 
+        <!-- Uso de Serviços Extras -->
+        <h2>Serviços Extras</h2>
+        <div class="form-group">
+            <label for="servicos_extras">Serviços Utilizados:</label>
+            <div>
+                <input type="checkbox" id="consultoria" name="servicos_extras" value="Consultoria">
+                <label for="consultoria">Consultoria</label>
+            </div>
+            <div>
+                <input type="checkbox" id="personal" name="servicos_extras" value="Personal">
+                <label for="personal">Personal</label>
+            </div>
+            <div>
+                <input type="checkbox" id="aulas_coletivas" name="servicos_extras" value="Aulas Coletivas">
+                <label for="aulas_coletivas">Aulas Coletivas</label>
+            </div>
+        </div>
 
-<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
+        <!-- Registros de Interações -->
+        <h2>Registros de Interações</h2>
+        <div class="form-group">
+            <label for="interacoes">Pedidos, Elogios, Reclamações:</label>
+            <textarea id="interacoes" name="interacoes" rows="4" placeholder="Descreva interações relevantes do cliente com a equipe"></textarea>
+        </div>
+
+        <button type="submit" class="btn">Cadastrar Cliente</button>
+    </form>
+</div>
+```
 
 </body>
-</html>
+</html> adicione a esse codigo html um chikin para os alunos da academia  
